공개 전 인증·권한·비밀정보 보안 강화 / Harden auth, authorization and secrets before public release